--- a/css/home.css
+++ b/css/home.css
@@ -1,51 +1,30 @@
-* {box-sizing: border-box}
-body {
-    font-family: "Lato", sans-serif;
-    margin: 0px;
+*{
+  padding: 0;
+  margin: 0;
 }
 
-/* Style the tab */
-.tab {
+ .tab {
   float: left;
-  border: 1px solid #ccc;
-  background-color: #59C1F8;
+  border: 0px ;
+  font-family:  Arial, Helvetica, sans-serif;
+  background-color: hsla(rgb(83, 5, 5), 100%, 50%, 0.3);
+  font-weight: 100;
   width: 15%;
   height: 666px;
+  
 }
 
-/* Style the buttons inside the tab */
-.tab button {
+ .tab button {
   display: block;
-  background-color: #78AFF6;
+  background-color: hsla(rgb(83, 5, 5), 100%, 50%, 0.3);
   color: black;
-  padding: 22px 16px;
+  padding:  auto;
   width: 100%;
-  border: 0.5;
+  border-radius: 10px;
   outline: none;
   text-align: center;
   cursor: pointer;
   transition: 0.5s;
   font-size: 25px;
   height: 33.33333%;
-}
-
-/* Change background color of buttons on hover */
-.tab button:hover {
-  background-color: rgb(183, 219, 233);
-}
-
-/* Create an active/current "tab button" class */
-.tab button.active {
-  background-color: royalblue;
-}
-
-/* Style the tab content */
-.tabcontent {
-    background-color: royalblue;
-    float: left;
-    padding: 0px 12px;
-    border: 1px solid;
-    width: 85%;
-    border-left: none;
-    height: 666px;
 }
