--- a/css/home.css
+++ b/css/home.css
@@ -1,30 +1,61 @@
 *{
   padding: 0;
   margin: 0;
+  box-sizing: border-box;
 }
-
- .tab {
-  float: left;
-  border: 0px ;
-  font-family:  Arial, Helvetica, sans-serif;
-  background-color: hsla(rgb(83, 5, 5), 100%, 50%, 0.3);
-  font-weight: 100;
-  width: 15%;
-  height: 666px;
+body{
+  background-image: linear-gradient(to right, white , rgba(16, 158, 253, 0.658));
+  background-attachment: fixed;
+  width: 100%;
+  height: auto;
+  
   
 }
-
- .tab button {
+/* Style the tab */
+ .tab {
   display: block;
-  background-color: hsla(rgb(83, 5, 5), 100%, 50%, 0.3);
-  color: black;
-  padding:  auto;
-  width: 100%;
-  border-radius: 10px;
-  outline: none;
+  float: left;
+  width: 15%;
+  height: 666px;
+  padding: 5px;
+  margin-left: 3px;
+  position: fixed;
+  overflow-x: hidden;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  
+}
+/* Style the navbar inside the tab */
+ .tab a {
+  font: 18px  Arial, Helvetica, sans-serif ;
+  background-color: #16b7f79f;
+  color: white;
+  padding: 70px 16px;
   text-align: center;
+  text-decoration: none;
+  display: block;
+  margin: 2px 2px;
   cursor: pointer;
-  transition: 0.5s;
-  font-size: 25px;
-  height: 33.33333%;
+  border-radius: 5px;
+  font-weight: 100;
+  width: 90%;
+  height: 30%;
+}
+/* Change background color of buttons on hover */
+.tab a:hover{
+  background-color: #2d96c0cb;
+  text-shadow:1px 1px 1px #103e50c9;
+}
+/* Create an active/current "navbar" */
+.tab a:active{
+  background-color: #16b7f7;
+}
+
+
+
+.tabcontent {
+  margin-left: 200px;
+  padding: 5px ;
+  
 }
