--- a/css/home.css
+++ b/css/home.css
@@ -1,61 +1,118 @@
 *{
   padding: 0;
   margin: 0;
-  box-sizing: border-box;
+  
 }
 body{
-  background-image: linear-gradient(to right, white , rgba(16, 158, 253, 0.658));
-  background-attachment: fixed;
-  width: 100%;
-  height: auto;
-  
-  
-}
-/* Style the tab */
- .tab {
-  display: block;
-  float: left;
-  width: 15%;
+  background-image:linear-gradient(to bottom, rgba(255, 255, 255, 0.959), rgba(128, 128, 255, 0.904));
+  background-repeat: no-repeat;
   height: 666px;
-  padding: 5px;
-  margin-left: 3px;
-  position: fixed;
-  overflow-x: hidden;
-  z-index: 1;
-  top: 0;
-  left: 0;
+  width: 100%;
+}
+/* standed style*/
+.nav_bar  {
+  
+  width: 100%;
+  height: 100px;
   
 }
-/* Style the navbar inside the tab */
- .tab a {
-  font: 18px  Arial, Helvetica, sans-serif ;
-  background-color: #16b7f79f;
-  color: white;
-  padding: 70px 16px;
+.nav_bar a{
+  display: inline-block;
+  width: 21%;
+  padding: 20px;
+  margin-left: 3.5px;
+  margin-top: 20px;
   text-align: center;
   text-decoration: none;
-  display: block;
-  margin: 2px 2px;
-  cursor: pointer;
-  border-radius: 5px;
-  font-weight: 100;
-  width: 90%;
-  height: 30%;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 20px;
+  text-transform: uppercase;
+  border: 1px solid rgba(128, 128, 255, 0.904);
+  border-radius: 4px;
+  color: rgba(128, 128, 255, 0.904);
+  cursor: grabbing;
 }
-/* Change background color of buttons on hover */
-.tab a:hover{
-  background-color: #2d96c0cb;
-  text-shadow:1px 1px 1px #103e50c9;
-}
-/* Create an active/current "navbar" */
-.tab a:active{
-  background-color: #16b7f7;
+
+.nav_bar a:hover{
+  background-color: rgba(128, 128, 255, 0.904);
+  color: white;
+  letter-spacing: 1px;
+  transition-duration: 0.9s;
 }
 
 
+/* start for table and menu style*/
+.addContect{
+  margin-top: 50px;
+  margin-left: 150px;
+  display: inline-block;
+  height: fit-content;
+}
+.lable{
+  font-size: 20px;
+  font-family: Arial, Helvetica, sans-serif;
+  color:rgba(128, 128, 255, 0.904) ;
+  padding: 10px;
+  margin: 5px;
+  display: inline-block;
+}
 
-.tabcontent {
-  margin-left: 200px;
-  padding: 5px ;
+.addContect .table_nobox{
+  border: rgba(128, 128, 255, 0.904) 1px solid;
+  border-radius: 4px;
+  font-size: 25px;
+  width: 80px;
+  color: rgba(128, 128, 255, 0.904);
+  text-align: center;
+  display: inline-block;
+  padding: 5px;
+  overflow-y: hidden ;
+  
   
 }
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;}
+
+.addContect .table_summit{
+  border: rgba(128, 128, 255, 0.904) 1px solid;
+  margin-left: 20px ;
+  border-radius: 4px;
+  font-size: 17px;
+  color: rgba(128, 128, 255, 0.904);
+  text-align: center;
+  display: inline-block;
+  padding: 5px;
+  background-color: white;
+
+}
+
+.addContect .table_summit:hover{
+  background-color: rgba(128, 128, 255, 0.904);
+  color: white;
+  letter-spacing: 1px;
+  transition-duration: 0.9s;
+
+}
+
+.menu_table table,tr,td{
+  border: 1px solid white;
+  text-align: left;
+}
+.menu_table{
+  margin: 15px;
+  margin-top: 50px;
+}
+.menu_table table{
+  border-collapse: collapse;
+  width: 100%;
+}
+.menu_table tr,td{
+  padding: 15px;
+}
+
+.number{
+  width: 50px;
+}
+
